[package]
name = "universal_printer_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Devices_Enumeration",
    "Win32_Storage_Xps",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"